--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <link href="/assets/css/index.css" rel="stylesheet">
   <link href="/assets/css/fonts.css" rel="stylesheet">
+  <script src="/assets/js/index.js" type="application/javascript"></script>
 </head>
 
 <body>
