--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
+  <div id="modal-barier"></div>
   <div id="root">
-
     <div id="main-header">
       <h1>Anime Quote</h1>
       <img id="info-icon" src="/assets/img/Info.png">
@@ -32,15 +32,15 @@
       <div class="quote-card">
         <div class="quote-img"></div>
         <p class="quote-content">"test test test test test test test test test testtest testtest testtest test"</p>
-        <p class="quote-by">By: <span class="quote-anime-char">Zakky</span></p>
+        <p class="quote-by">By: <span class="quote-anime-char">dev</span></p>
       </div>
     </div>
+  </div>
 
-    <div id="footer">
-      <div id="dev-container">
-        <img src="/assets/img/dev.png">
-        <p>wibucode.dev</p>
-      </div>
+  <div id="footer">
+    <div id="dev-container">
+      <img src="/assets/img/dev.png">
+      <p>wibucode.dev</p>
     </div>
   </div>
 </body>
